--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <span> Destinize</span>
         </div>
         <div class="input">
-          <img src="./images/search.svg" width="" alt="" />
-          <input placeholder="Cari apapun disini..." type="text" />
+          <img class="search" src="./images/search.svg" width="" alt="" />
+          <input class="in" placeholder="Cari apapun disini..." type="text" />
         </div>
         <div class="inter">
           <a href="#"><img src="./images/internet.svg" alt="" /></a
@@ -83,8 +83,31 @@
           Indonesia dengan mengikuti perkembangan para influencer di sosial
           media ✨
         </p>
+        <div class="putar">
+          <div class="button">
+            <button>Mulai sekarang →</button>
+          </div>
+          <div class="ellipse">
+            <img src="./images/Polygon 1 (2).svg" alt="" />
+          </div>
+          <h4>Putar Demo</h4>
+        </div>
       </div>
-      <div class="button"><button>Mulai sekarang →</button></div>
+
+      <div><img class="photo" src="./images/mainphoto.png" alt="" /></div>
+    </div>
+    <div class="container logo__container">
+      <div>
+        <img src="./images/axon.svg" alt="axon" />
+        <img src="./images/jetstar.svg" alt="jetstar" />
+      </div>
+      <div>
+        <img src="./images/expedia.svg" alt="expedia" />
+        <img src="./images/qantas.svg" alt="qantas" />
+      </div>
+      <div>
+        <img src="./images/alitalia.svg" alt="alitalia" />
+      </div>
     </div>
   </body>
 </html>
