--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <a href="#"><img src="./images/logo.svg" alt="" /></a>
           <span> Destinize</span>
         </div>
-        <div class="input">
+        <div class="input__box">
           <img class="search" src="./images/search.svg" width="" alt="" />
-          <input class="in" placeholder="Cari apapun disini..." type="text" />
+          <input placeholder="Cari apapun disini..." type="text" />
         </div>
         <div class="inter">
           <a href="#"><img src="./images/internet.svg" alt="" /></a
@@ -25,10 +25,11 @@
         <div class="location">
           <img src="./images/location.svg" alt="" />
           <div class="locate">
-            <h6>Lokasi</h6>
-            <h5>
-              Indonesia, Yogyakarta <img src="./images/move arrow.svg" alt="" />
-            </h5>
+            <p>Lokasi</p>
+            <div class="indonesia">
+              <h5>Indonesia, Yogyakarta</h5>
+              <img src="./images/move arrow.svg" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -39,7 +40,6 @@
         <li class="li">
           <a href="#">Gunung </a><img src="./images/arrow-down.svg" alt="" />
         </li>
-
         <li class="li">
           <a href="#">Pantai </a><img src="./images/arrow-down.svg" alt="" />
         </li>
@@ -63,8 +63,8 @@
         </li>
       </ul>
       <div class="right__nav">
-        <a href="#"><img src="./images/Cart.svg" alt="" /></a>
-        <a href="#"><img src="./images/person.svg" alt="" /></a>
+        <img src="./images/Cart.svg" alt="" />
+        <img src="./images/person.svg" alt="" />
       </div>
     </div>
     <div class="container main__container">
@@ -84,30 +84,40 @@
           media ✨
         </p>
         <div class="putar">
-          <div class="button">
-            <button>Mulai sekarang →</button>
-          </div>
+          <button>Mulai sekarang →</button>
+          <!-- </div> -->
           <div class="ellipse">
             <img src="./images/Polygon 1 (2).svg" alt="" />
           </div>
-          <h4>Putar Demo</h4>
+          <div><h4>Putar Demo</h4></div>
         </div>
       </div>
 
       <div><img class="photo" src="./images/mainphoto.png" alt="" /></div>
     </div>
     <div class="container logo__container">
-      <div>
-        <img src="./images/axon.svg" alt="axon" />
-        <img src="./images/jetstar.svg" alt="jetstar" />
+      <div class="logos">
+        <img src="./images/axon.svg" width="145" height="145" alt="axon" />
+        <img
+          class="jetstar"
+          src="./images/jetstar.svg"
+          width="192"
+          height="122"
+          alt="jetstar"
+        />
       </div>
-      <div>
-        <img src="./images/expedia.svg" alt="expedia" />
-        <img src="./images/qantas.svg" alt="qantas" />
+      <div class="logos1">
+        <img class="expedia" src="./images/expedia.svg" alt="expedia" />
+        <img src="./images/qantas.svg" width="180" height="35" alt="qantas" />
       </div>
-      <div>
-        <img src="./images/alitalia.svg" alt="alitalia" />
-      </div>
+
+      <img
+        class="logos"
+        src="./images/alitalia.svg"
+        width="104"
+        height="23"
+        alt="alitalia"
+      />
     </div>
   </body>
 </html>
