--- a/index.html
+++ b/index.html
@@ -37,30 +37,35 @@
     </header>
     <div class="container nav__container">
       <ul class="nav__list">
-        <li class="li">
-          <a href="#">Gunung </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Pantai </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Kuliner </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Outbond </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Sejarah </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Edukasi </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Romantis </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
-        <li class="li">
-          <a href="#">Alam </a><img src="./images/arrow-down.svg" alt="" />
-        </li>
+        <div class="nav">
+          <li class="li">
+            <a href="#">Gunung </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Pantai </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Kuliner </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Outbond </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+        </div>
+        <div class="nav">
+          <li class="li">
+            <a href="#">Sejarah </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Edukasi </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Romantis </a
+            ><img src="./images/arrow-down.svg" alt="" />
+          </li>
+          <li class="li">
+            <a href="#">Alam </a><img src="./images/arrow-down.svg" alt="" />
+          </li>
+        </div>
       </ul>
       <div class="right__nav">
         <img src="./images/Cart.svg" alt="" />
@@ -106,18 +111,17 @@
           alt="jetstar"
         />
       </div>
-      <div class="logos1">
-        <img class="expedia" src="./images/expedia.svg" alt="expedia" />
+      <div class="logos">
+        <!-- <img class="expedia" src="./images/expedia.svg" alt="expedia" /> -->
         <img src="./images/qantas.svg" width="180" height="35" alt="qantas" />
+        <img
+          class="logos"
+          src="./images/alitalia.svg"
+          width="104"
+          height="23"
+          alt="alitalia"
+        />
       </div>
-
-      <img
-        class="logos"
-        src="./images/alitalia.svg"
-        width="104"
-        height="23"
-        alt="alitalia"
-      />
     </div>
   </body>
 </html>
